<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="#ffffffff">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/laws"
            style="?android:textAppearanceSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/laws"
            android:textStyle="bold"
            android:background="@color/orange"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/legal_advice"
            android:layout_alignStart="@+id/legal_advice"
            android:layout_marginTop="70dp" />
        <Button
            android:id="@+id/legal_advice"
            style="?android:textAppearanceSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/legal_advice"
            android:textStyle="bold"
            android:background="@color/orange"
            android:layout_above="@+id/legal_services"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp" />
        <Button
            android:id="@+id/legal_services"
            style="?android:textAppearanceSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/legal_services"
            android:textStyle="bold"
            android:background="@color/orange"
            android:layout_marginBottom="68dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/legal_advice"
            android:layout_alignStart="@+id/legal_advice" />

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>